--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
